test/scc_test/exp/semantic-errors/005.a
005.t:8:7: error: undeclared identifier 'b'